Update workshop descriptions for clarity and detail

--- a/quizz.html
+++ b/quizz.html
@@ -179,86 +179,86 @@
         const INFO_TALLERES = [
             {
                 nombre: "Conductas de riesgo de la vida familiar (El poder de la familia)",
-                obj: "Brindar herramientas para crianza respetuosa y detección de factores de riesgo.",
+                obj: "Brindar herramientas a padres, madres, tutores y cuidadores para ejercer la crianza de manera respetuosa, mientras detectan conductas y factores de riesgo para el consumo de sustancias y problemas de salud mental que pueden afectar la vida familiar. .",
                 horario: "Lunes 09:00 - 11:30",
                 sede: "Centro Cultural Manuel Gómez Morín",
                 temas: ["Conductas de riesgo", "Depresión", "Ansiedad", "Consumo de sustancias", "Autoestima", "Manejo de emociones"]
             },
             {
                 nombre: "Solución de Conflictos en Procesos de Separación o Divorcio",
-                obj: "Desarrollo de habilidades de comunicación y mediación familiar.",
+                obj: "Facilitar un espacio de reflexión sobre las diferentes formas de interacción en el espacio familiar que facilite a los participantes, el desarrollo de habilidades de comunicación. ",
                 horario: "Lunes 11:30 - 14:00",
                 sede: "Centro Cultural Manuel Gómez Morín",
                 temas: ["Teoría del conflicto", "Mecanismos de solución", "Habilidades de mediación", "Modelo de policía de proximidad"]
             },
             {
                 nombre: "Competencias Parentales",
-                obj: "Herramientas para responsabilidad asertiva, apego seguro y prevención de violencia.",
+                obj: "Brindar herramientas para llevar responsabilidad asertiva y poder acompañar, proteger y crear un espacio seguro para sus hijos.",
                 horario: "Martes 09:00 - 11:30",
                 sede: "Psyque IAP (Circuito Universitario)",
                 temas: ["Padres responsables", "Apego seguro", "Violencia familiar", "Inteligencia emocional", "Manejo de estrés", "Maltrato infantil"]
             },
             {
                 nombre: "Herramientas para la crianza con hijos adolescentes",
-                obj: "Sensibilización en temas de familia y crianza para padres de adolescentes.",
+                obj: "Ofrecer un espacio de aprendizaje, diálogo y reflexión, desde el cual, madres, padres y cuidadores de adolescentes puedan sensibilizarse en temas de familia y crianza, facilitando la responsabilidad en la paternidad, prevención y solución de conflictos. Así como fomentar el desarrollo de herramientas que impulsen la construcción de vínculos familiares positivos para el adecuado desarrollo del adolescente.",
                 horario: "Martes 11:30 - 14:00",
                 sede: "Centro Cultural Manuel Gómez Morín",
                 temas: ["Responsabilidades parentales", "Adolescente y familia", "Crianza positiva", "Autocuidado", "Delitos Cibernéticos", "Manejo de conflictos"]
             },
             {
                 nombre: "¿Qué le falta a tu casa?",
-                obj: "Mejorar la convivencia y prevenir el consumo de sustancias.",
+                obj: "Mejorar la convivencia entre padres e hijos; fortalecer creencias, valores y hábitos que ayuden en la formación de estilos de vida saludables y prevenir el consumo de alcohol, tabaco y otras drogas.",
                 horario: "Martes 17:00 - 18:00 (VIRTUAL)",
                 sede: "Vía ZOOM",
                 temas: ["Valores", "Comunicación", "Expresión de sentimientos", "Supervisión", "Normas y reglas", "Factores protectores"]
             },
             {
                 nombre: "Espacios de hombres: responsabilidad, poder y vínculos",
-                obj: "Deconstruir patrones de violencia y construir nuevas formas de masculinidad. (SOLO HOMBRES)",
+                obj: "Confrontar a los participantes acerca de su responsabilidad en las conductas violentas ejercidas hacia mujeres, hijas e hijos, utilizando como marco las Siete P’s de la violencia masculina de Michael Kaufman, la metodología confrontativa del modelo CECEVIM y los recursos reflexivos del Instituto WEM, con el fin de deconstruir patrones de violencia, reconocer privilegios, aprender a gestionar emociones y construir nuevas formas de masculinidad responsable, corresponsable y cuidadora.                             ***TALLER EXCLUSIVO PARA HOMBRES***",
                 horario: "Martes 17:00 - 19:00",
                 sede: "Invierno 89, Col. España",
                 temas: ["Violencia y consecuencias", "Masculinidad y poder", "Las 7 P's de la violencia", "Sexualidad sin violencia", "Autocontrol"]
             },
             {
                 nombre: "Crianza Afectiva (Escuela de las Familias)",
-                obj: "Promover contextos familiares afectivos y libres de violencia.",
+                obj: "Promover contextos familiares afectivos y libres de violencia, promoviendo dinámicas familiares sanas y el fortalecimiento de los vínculos afectivos.",
                 horario: "Miércoles 09:00 - 11:30",
                 sede: "Salón Adulto Mayor (Quintas del Marqués)",
                 temas: ["Mirada al interior", "Inteligencia emocional", "Heridas de infancia", "Autoestima familiar", "Estilos de crianza", "Lenguajes del amor"]
             },
             {
                 nombre: "Cerrando para Sanar (Reingeniería Familiar)",
-                obj: "Contención y orientación para disminuir el impacto de la separación o divorcio.",
+                obj: "Brindar un espacio de contención y orientación que contribuya a la reducción de la tensión emocional, a fin de propiciar la disminución del impacto de la separación o divorcio en el desarrollo psicoemocional de los niños, niñas, adolescentes y jóvenes; brindando herramientas a las personas involucradas para fortalecer sus vínculos y realizar su función educativa de forma afectiva y asertiva.",
                 horario: "Miércoles 11:30 - 14:00",
                 sede: "Salón Adulto Mayor (Quintas del Marqués)",
                 temas: ["Impacto de la separación", "Duelo", "El perdón", "Autoestima familiar", "Estilos de crianza", "Acuerdos para el bienestar"]
             },
             {
                 nombre: "Relaciones Familiares Sanas",
-                obj: "Desarrollo de habilidades de comunicación para mejorar relaciones familiares.",
+                obj: "Facilitar un espacio de reflexión sobre las diferentes formas de interacción en la familia que posibilite a los participantes el desarrollo de habilidades de comunicación, así como la obtención de herramientas que les permita mejorar sus relaciones dentro de su círculo familiar. ",
                 horario: "Miércoles 11:30 - 14:00",
                 sede: "Centro Cultural Manuel Gómez Morín",
                 temas: ["Tipos de familia", "Dinámica familiar", "Violencia", "Comunicación asertiva", "Emociones", "Parentalidad positiva"]
             },
             {
                 nombre: "Vida, Estrés y Crianza (Democratización de las familias)",
-                obj: "Herramientas para afrontar el estrés parental.",
+                obj: "Crear un espacio de escucha para padres y madres por medio de un taller psicoeducativo que les brinde herramientas/técnicas/recursos donde se aborde el estrés parental y puedan reflexionar sobre cómo influye en su rol como cuidadores, cómo disminuirlo y/o cómo afrontarlo en beneficio de sí mismos y en relación con sus hijos.",
                 horario: "Miércoles 16:00 - 18:30",
                 sede: "Centro Cultural Manuel Gómez Morín",
                 temas: ["Expectativas vs Realidad", "¿Qué es el estrés?", "Límites claros", "Crianza positiva", "Vínculo parental", "Culpa y duelo"]
             },
             {
                 nombre: "Habilidades de Crianza para Cuidadores de Niñas, Niños y/o Adolescentes",
-                obj: "Reflexión sobre interacción familiar y buen trato.",
+                obj: "Facilitar un espacio de reflexión sobre las diferentes formas de interacción en la familia que posibilite a los participantes el desarrollo de habilidades de comunicación, así como la obtención de herramientas que les permita mejorar sus relaciones dentro de su círculo familiar.",
                 horario: "Jueves 11:30 - 14:00",
                 sede: "Centro Cultural Manuel Gómez Morín",
                 temas: ["Cuidados de NNA", "Buen trato", "Resiliencia", "Maltrato infantil", "Apego", "Competencias parentales"]
             },
             {
-                nombre: "Vivir sin Violencia y en Igualdad",
+                nombre: "Brindar a las personas participantes herramientas sencillas y claras para comprender la igualdad y la violencia de género desde la vida cotidiana, identificar situaciones de riesgo, fortalecer el autocuidado y promover relaciones más respetuosas, corresponsables y libres de violencia, tanto en el ámbito de pareja, como en el familiar en la comunidad.    ***TALLER EXCLUSIVO PARA MUJERES***",
                 obj: "Herramientas para comprender la igualdad y violencia de género. (SOLO MUJERES)",
-                horario: "Viernes 09:00 - 11:00 (VIRTUAL)",
-                sede: "Vía ZOOM",
+                horario: "Viernes 09:00 - 11:00 ",
+                sede: "Se confirma al inscribirse",
                 temas: ["ABC de género", "Igualdad y no discriminación", "Tipos de violencia", "Amor romántico vs real", "Violencia sexual", "Masculinidades positivas"]
             }
         ];
