Update workshop details in quizz.html

--- a/quizz.html
+++ b/quizz.html
@@ -255,10 +255,10 @@
                 temas: ["Cuidados de NNA", "Buen trato", "Resiliencia", "Maltrato infantil", "Apego", "Competencias parentales"]
             },
             {
-                nombre: "Brindar a las personas participantes herramientas sencillas y claras para comprender la igualdad y la violencia de género desde la vida cotidiana, identificar situaciones de riesgo, fortalecer el autocuidado y promover relaciones más respetuosas, corresponsables y libres de violencia, tanto en el ámbito de pareja, como en el familiar en la comunidad.    ***TALLER EXCLUSIVO PARA MUJERES***",
-                obj: "Herramientas para comprender la igualdad y violencia de género. (SOLO MUJERES)",
+                nombre: "Vivir sin Violencia y en Igualdad: herramientas para la vida cotidiana.",
+                obj: "Brindar a las personas participantes herramientas sencillas y claras para comprender la igualdad y la violencia de género desde la vida cotidiana, identificar situaciones de riesgo, fortalecer el autocuidado y promover relaciones más respetuosas, corresponsables y libres de violencia, tanto en el ámbito de pareja, como en el familiar en la comunidad.    ***TALLER EXCLUSIVO PARA MUJERES***",
                 horario: "Viernes 09:00 - 11:00 ",
-                sede: "Se confirma al inscribirse",
+                sede: "Se confirma al inscribirse.",
                 temas: ["ABC de género", "Igualdad y no discriminación", "Tipos de violencia", "Amor romántico vs real", "Violencia sexual", "Masculinidades positivas"]
             }
         ];
