Actualizar quizz.html

--- a/quizz.html
+++ b/quizz.html
@@ -208,8 +208,8 @@
             {
                 nombre: "¿Qué le falta a tu casa?",
                 obj: "Mejorar la convivencia entre padres e hijos; fortalecer creencias, valores y hábitos que ayuden en la formación de estilos de vida saludables y prevenir el consumo de alcohol, tabaco y otras drogas.",
-                horario: "Martes 17:00 - 18:00 (VIRTUAL)",
-                sede: "Vía ZOOM",
+                horario: "Martes 17:00 - 18:00",
+                sede: "Se confirma al inscribirse.",
                 temas: ["Valores", "Comunicación", "Expresión de sentimientos", "Supervisión", "Normas y reglas", "Factores protectores"]
             },
             {
