Actualizar quizz.html

--- a/quizz.html
+++ b/quizz.html
@@ -89,7 +89,7 @@
             <label>Teléfono celular (10 dígitos) *</label>
             <input type="tel" id="telefono" maxlength="10" pattern="[0-9]{10}" required>
             
-            <label>Taller que va a cursar Favor de seleccionar correctamente el taller que indicó la autoridad que lo canalizó o de quien realizó la recomendación, de acuerdo a su caso o situación familiar. *</label>
+            <label>Favor de seleccionar correctamente el taller que indicó la autoridad que lo canalizó o de quien realizó la recomendación, de acuerdo a su caso o situación familiar. *</label>
             <select id="taller" required><option value="">Cargando talleres...</option></select>
             
             <label>Quién canaliza *</label>
