--- a/quizz.html
+++ b/quizz.html
@@ -117,21 +117,21 @@
             <div class="terms-box">
                 <b>REGLAMENTO PARA PARTICIPANTES:</b><br><br>
                 1. Aceptar el reglamento.<br>
-                2. Tomar el taller en las instalaciones indicadas.<br>
-                3. Acudir puntual (llegar 10 min antes).<br>
-                4. Asistir al total de sesiones del taller.<br>
-                5. Permanecer en cada sesión hasta que finalice.<br>
+                2. Tomar el o los talleres de la Escuela de FDHpMPTC en las instalaciones y domicilio de la institución indicados en la inscripción.<br>
+                3. Acudir de manera puntual (llegar 10 minutos antes) al o los talleres en los que estoy inscrita/inscrito.<br>
+                4. Asistir al total de sesiones de aprendizaje del taller o talleres en los que me he inscrito.<br>
+                5. Permanecer en cada sesión de aprendizaje del taller hasta que éste finalice.<br>
                 6. Suspender el uso del celular durante el taller.<br>
-                7. Participar de manera respetuosa y activa.<br>
-                8. Realizar las tareas e indicaciones de talleristas.<br>
+                7. Participar de manera respetuosa y activa en cada sesión de aprendizaje.<br>
+                8. Realizar las tareas y los ejercicios que se indiquen por parte de las y los talleristas.<br>
                 9. Llevar mi propio control de asistencias.<br>
-                10. Portar libreta y repasar notas.<br>
-                11. Aplicar lo aprendido en la vida diaria.<br>
-                12. Menos de 8 sesiones invalida la Constancia.<br>
-                13. No se admite el acceso de menores de edad.<br>
-                14. No se admite asistencia de personas no inscritas.<br>
-                15. Comportamientos indebidos causan baja inmediata.<br>
-                16. Asumir consecuencias por comportamiento inadecuado.
+                10. Portar libreta, anotar, repasar mis notas.<br>
+                11. Aplicar lo aprendido en este taller en mi vida diaria.<br>
+                12. Tomar menos de 8 sesiones de aprendizaje, no valida la obtención de mi Constancia de Terminación de Taller.<br>
+                13. No se admite el acceso de niñas, niños o adolescentes al taller.<br>
+                14. No se admite la asistencia de personas que no estén inscritas.<br>
+                15. Comportamientos indebidos en el proceso grupal, faltas de respeto al tallerista y/o a integrantes del grupo, causan la baja del taller y la notificación de la misma al juzgado correspondiente o área que derive.<br>
+                16. Asumir las consecuencias derivadas de un comportamiento inadecuado de mi parte, tales, como faltas de respeto a las talleristas y/o a quienes integran el grupo.
             </div>
             
             <label class="check-container">
