antes de esta funcionaba

--- a/encuesta.html
+++ b/encuesta.html
@@ -74,7 +74,7 @@
         <form id="surveyForm" onsubmit="enviarEncuesta(event)">
             
             <div class="form-group">
-                <label>2. ¿La duración de las sesiones fue completa?</label>
+                <label>⏱️ 2. ¿La duración de las sesiones fue completa?</label>
                 <div class="options-container">
                     <input type="radio" name="q2" id="q2_si" value="SÍ" class="radio-btn" required><label for="q2_si" class="option-label">👍 SÍ</label>
                     <input type="radio" name="q2" id="q2_no" value="NO" class="radio-btn"><label for="q2_no" class="option-label">👎 NO</label>
@@ -82,7 +82,7 @@
             </div>
 
             <div class="form-group">
-                <label>3. El desempeño del/la tallerista fue:</label>
+                <label>👨‍🏫 3. El desempeño del/la tallerista fue:</label>
                 <div class="options-container">
                     <input type="radio" name="q3" id="q3_exc" value="EXCELENTE" class="radio-btn" required><label for="q3_exc" class="option-label">🤩 Excelente</label>
                     <input type="radio" name="q3" id="q3_bien" value="BIEN" class="radio-btn"><label for="q3_bien" class="option-label">🙂 Bien</label>
@@ -92,7 +92,7 @@
             </div>
 
             <div class="form-group">
-                <label>4. ¿Se utilizaron estrategias para fortalecer el aprendizaje (videos, dinámicas, etc.)?</label>
+                <label>🧩 4. ¿Se utilizaron estrategias para fortalecer el aprendizaje (videos, dinámicas, etc.)?</label>
                 <div class="options-container">
                     <input type="radio" name="q4" id="q4_si" value="SÍ" class="radio-btn" required><label for="q4_si" class="option-label">SÍ</label>
                     <input type="radio" name="q4" id="q4_no" value="NO" class="radio-btn"><label for="q4_no" class="option-label">NO</label>
@@ -100,7 +100,7 @@
             </div>
 
             <div class="form-group">
-                <label>5. El contenido y aprendizaje del taller fue:</label>
+                <label>📚 5. El contenido y aprendizaje del taller fue:</label>
                 <div class="options-container">
                     <input type="radio" name="q5" id="q5_exc" value="EXCELENTE" class="radio-btn" required><label for="q5_exc" class="option-label">🤩 Excelente</label>
                     <input type="radio" name="q5" id="q5_bien" value="BIEN" class="radio-btn"><label for="q5_bien" class="option-label">🙂 Bien</label>
@@ -110,7 +110,7 @@
             </div>
 
             <div class="form-group">
-                <label>6. ¿Está interesado en tomar otro taller de forma voluntaria?</label>
+                <label>🙋 6. ¿Está interesado en tomar otro taller de forma voluntaria?</label>
                 <div class="options-container">
                     <input type="radio" name="q6" id="q6_si" value="SÍ" class="radio-btn" required><label for="q6_si" class="option-label">SÍ</label>
                     <input type="radio" name="q6" id="q6_no" value="NO" class="radio-btn"><label for="q6_no" class="option-label">NO</label>
@@ -118,7 +118,7 @@
             </div>
 
             <div class="form-group">
-                <label>7. ¿Recomendaría estos talleres a otras personas?</label>
+                <label>📢 7. ¿Recomendaría estos talleres a otras personas?</label>
                 <div class="options-container">
                     <input type="radio" name="q7" id="q7_si" value="SÍ" class="radio-btn" required><label for="q7_si" class="option-label">SÍ</label>
                     <input type="radio" name="q7" id="q7_no" value="NO" class="radio-btn"><label for="q7_no" class="option-label">NO</label>
@@ -126,7 +126,7 @@
             </div>
 
             <div class="form-group">
-                <label>8. Su compromiso en participación y aprovechamiento fue:</label>
+                <label>🤝 8. Su compromiso en participación y aprovechamiento fue:</label>
                 <div class="options-container">
                     <input type="radio" name="q8" id="q8_exc" value="EXCELENTE" class="radio-btn" required><label for="q8_exc" class="option-label">Excelente</label>
                     <input type="radio" name="q8" id="q8_bien" value="BIEN" class="radio-btn"><label for="q8_bien" class="option-label">Bien</label>
@@ -135,7 +135,7 @@
             </div>
 
             <div class="form-group">
-                <label>9. Su compromiso en puntualidad y asistencia fue:</label>
+                <label>⏰ 9. Su compromiso en puntualidad y asistencia fue:</label>
                 <div class="options-container">
                     <input type="radio" name="q9" id="q9_exc" value="EXCELENTE" class="radio-btn" required><label for="q9_exc" class="option-label">Excelente</label>
                     <input type="radio" name="q9" id="q9_bien" value="BIEN" class="radio-btn"><label for="q9_bien" class="option-label">Bien</label>
@@ -144,7 +144,7 @@
             </div>
 
             <div class="form-group">
-                <label>10. ¿Aplica lo aprendido en su vida diaria?</label>
+                <label>🏠 10. ¿Aplica lo aprendido en su vida diaria?</label>
                 <div class="options-container">
                     <input type="radio" name="q10" id="q10_si" value="SÍ" class="radio-btn" required><label for="q10_si" class="option-label">SÍ</label>
                     <input type="radio" name="q10" id="q10_no" value="NO" class="radio-btn"><label for="q10_no" class="option-label">NO</label>
@@ -182,7 +182,6 @@
         };
 
         // 2. Enviar formulario
-       // 2. Enviar formulario
         async function enviarEncuesta(e) {
             e.preventDefault(); // 1. Evitamos que la página se recargue inmediatamente
 
