--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
         <div class="header-logo">DIF ESTATAL QUERÉTARO | UNIENDO CORAZONES</div>
         <div class="sub-header">Procuraduría de Protección de Niñas, Niños y Adolescentes</div>
         <h2>Escuela de Formación y Desarrollo Humano</h2>
-        <p class="subtitle">Ficha de Inscripción para Madres, Padres, Tutores y Cuidadores</p>
+        <p class="subtitle">Ficha de Inscripción para:</p>
+        <p class="subtitle">Madres, Padres, Tutores y Cuidadores.</p>
 
         <button type="button" class="btn-info" onclick="abrirCatalogoTalleres()">
             <span>📖</span> Ver Objetivos, Temarios y Horarios de Talleres
