--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <p>La Procuraduría de Protección de Niñas, Niños y Adolescentes del Estado de Querétaro informa que sus datos personales serán tratados para el proceso de inscripción y seguimiento a los talleres de la Escuela de Formación y Desarrollo Humano.</p>
                 <p>Usted puede ejercer sus derechos de acceso o rectificación enviando una solicitud oficial a la institución.</p>
                 <p style="text-align: center; margin-top: 15px;">
-                    <a href="https://github.com/cterrazas0104/constancias/blob/main/aviso_privacidad.pdf" target="_blank" style="color: var(--secondary-blue); font-weight: bold; text-decoration: underline;">
+                    <a href="aviso_privacidad.pdf" target="_blank" style="color: var(--secondary-blue); font-weight: bold; text-decoration: underline;">
                         Ver Aviso de Privacidad Completo
                     </a>
                 </p>
