--- a/index.html
+++ b/index.html
@@ -148,14 +148,10 @@
     <div id="miModal" class="modal">
         <div class="modal-content" style="max-width: 500px; height: auto;">
             <h3 style="color: var(--primary-purple); margin-top:0;">Aviso de Privacidad Simplificado</h3>
-            <div class="text-scroll" style="max-height: 300px;">
+            <div class="text-scroll">
                 <p>La Procuraduría de Protección de Niñas, Niños y Adolescentes del Estado de Querétaro informa que sus datos personales serán tratados para el proceso de inscripción y seguimiento a los talleres de la Escuela de Formación y Desarrollo Humano.</p>
                 <p>Usted puede ejercer sus derechos de acceso o rectificación enviando una solicitud oficial a la institución.</p>
-                <p style="text-align: center; margin-top: 15px;">
-                    <a href="aviso_privacidad.pdf" target="_blank" style="color: var(--secondary-blue); font-weight: bold; text-decoration: underline;">
-                        Ver Aviso de Privacidad Completo
-                    </a>
-                </p>
+                <p><a href="aviso_privacidad.pdf" target="_blank" style="color: var(--secondary-blue); font-weight: bold;">Ver documento completo (PDF)</a></p>
             </div>
             <div class="modal-footer">
                 <button onclick="confirmarPrivacidad()" style="background: var(--secondary-blue); color:white; border:none; padding: 15px 25px; border-radius:6px; cursor:pointer; font-weight:bold; width: 100%;">ACEPTAR Y CONTINUAR</button>
